# C-primer_test

./: .gitignore
test_1/: CMakeLists.txt  Chapter6.h  fact.cpp  factMain.cpp  main.out
test_2/: CMakeLists.txt  debug_vector.cpp  find_char.cpp  initializer_list.cpp  main.cpp  make_plural.cpp  myPrint.cpp  print_main_argv.cpp  prog  reset.cpp  swap_point.cpp
test_7/: CMakeLists.txt  Sales_data.cpp  Sales_data_2.cpp  Screen.cpp  Window_Screen.cpp  myPerson.cpp
test_8/: 8_1.cpp  8_2.cpp  8_4.cpp  8_5.cpp  CMakeLists.txt
